fixes styling alignment on graph sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
 }
 
 .addSensor {
-  max-width: 17vw;
+  max-width: 24vw;
   display: none;
 }
 
